  (Robert Muir)

Optimizations
---------------------

* GITHUB#14052: Speed up DisjunctionDISIApproximation#advance. (Adrien Grand)

* GITHUB#14080: Use the `DocIdSetIterator#loadIntoBitSet` API to speed up dense
  conjunctions. (Adrien Grand)

Bug Fixes
---------------------

* GITHUB#14109: prefetch may select the wrong memory segment for
  multi-segment slices. (Chris Hegarty)

Other
---------------------

* GITHUB#14081: Fix urls describing why NIOFS is not recommended for Windows (Marcel Yeonghyeon Ko)

* GITHUB#14116 Use CDL to block threads to avoid flaky tests. (Ao Li)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

* GITHUB#13998: Add IndexInput::isLoaded to determine if the contents of an
  input is resident in physical memory. (Chris Hegarty)

New Features
---------------------
* GITHUB#14034: Add support for storing term vectors in FeatureField. (Jim Ferenczi)

Improvements
---------------------

* GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with
  newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion`
  system property to increase the set of Java versions that Panama Vectorization will
  provide optimized implementations for. (Chris Hegarty)

* GITHUB#266: TieredMergePolicy now allows merging up to maxMergeAtOnce
  segments for merges below the floor segment size, even if maxMergeAtOnce is
  bigger than segsPerTier. (Adrien Grand)

* GITHUB#14033: Combine all postings enum impls of the default codec into a
  single class. (Adrien Grand)

Optimizations