@@ -314,6 +314,7 @@ public final class SortingCodecReader extends FilterCodecReader {
 
     SortingFloatVectorValues(FloatVectorValues delegate, Sorter.DocMap sortMap) throws IOException {
       this.delegate = delegate;
+      assert delegate != null;
       // SortingValuesIterator consumes the iterator and records the docs and ord mapping
       iteratorSupplier = iteratorSupplier(delegate, sortMap);
     }
@@ -446,6 +447,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   @Override
   public FieldsProducer getPostingsReader() {
     FieldsProducer postingsReader = in.getPostingsReader();
+    if (postingsReader == null) {
+      return null;
+    }
     return new FieldsProducer() {
       @Override
       public void close() throws IOException {
@@ -481,6 +485,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   @Override
   public StoredFieldsReader getFieldsReader() {
     StoredFieldsReader delegate = in.getFieldsReader();
+    if (delegate == null) {
+      return null;
+    }
     return newStoredFieldsReader(delegate);
   }
 
@@ -526,6 +533,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   @Override
   public PointsReader getPointsReader() {
     final PointsReader delegate = in.getPointsReader();
+    if (delegate == null) {
+      return null;
+    }
     return new PointsReader() {
       @Override
       public void checkIntegrity() throws IOException {
@@ -551,6 +561,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   @Override
   public KnnVectorsReader getVectorReader() {
     KnnVectorsReader delegate = in.getVectorReader();
+    if (delegate == null) {
+      return null;
+    }
     return new KnnVectorsReader() {
       @Override
       public void checkIntegrity() throws IOException {
@@ -587,6 +600,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   @Override
   public NormsProducer getNormsReader() {
     final NormsProducer delegate = in.getNormsReader();
+    if (delegate == null) {
+      return null;
+    }
     return new NormsProducer() {
       @Override
       public NumericDocValues getNorms(FieldInfo field) throws IOException {
@@ -609,6 +625,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   @Override
   public DocValuesProducer getDocValuesReader() {
     final DocValuesProducer delegate = in.getDocValuesReader();
+    if (delegate == null) {
+      return null;
+    }
     return new DocValuesProducer() {
       @Override
       public NumericDocValues getNumeric(FieldInfo field) throws IOException {
@@ -710,6 +729,9 @@ public final class SortingCodecReader extends FilterCodecReader {
   }
 
   private TermVectorsReader newTermVectorsReader(TermVectorsReader delegate) {
+    if (delegate == null) {
+      return null;
+    }
     return new TermVectorsReader() {
       @Override
       public void prefetch(int doc) throws IOException {
